# Blueprint_Viewer

./: .gitignore  README.md  package-lock.json  pyproject.toml  requirements.txt
backend/: BlueprintGen.py  Factory.py  Main.py  Orchestration.py  app.py  auth.py  authorization.py  db.py  models.py
backend/routes/: auth.py  chat.py
blueprintai/: README.md  index.html  package-lock.json  package.json  vite.config.js
blueprintai/src/: App.jsx  index.css
blueprintai/src/components/: BlueprintViewer.jsx  ChatPanel.jsx  Factorykitviewer.jsx  Sidebar.jsx
blueprintai/src/lib/: api.js
blueprintai/src/pages/: Dashboard.jsx  Login.jsx  Register.jsx
blueprintai/src/store/: useStore.js
